Finished paper introduction

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -28,6 +28,12 @@
 
 \input{chapters/header}
 \input{chapters/intro}
+\input{chapters/javascript}
+\input{chapters/asm.js}
+\input{chapters/webworkers}
+\input{chapters/datachannel}
+\input{chapters/webgpu}
+\input{chapters/conclusion}
 
 \end{document}
 
