* Finished JavaScript paper section * Added bib for citations

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -18,10 +18,10 @@
 %\usepackage{stfloats}
 %\usepackage{url}
 \usepackage[justification=centering]{caption}
+\usepackage{listings}
 \usepackage{ucs}
 \usepackage[utf8]{inputenc} 
 \hyphenation{op-tical net-works semi-conduc-tor}
-
 
 
 \begin{document}
@@ -34,6 +34,7 @@
 \input{chapters/datachannel}
 \input{chapters/webgpu}
 \input{chapters/conclusion}
+\input{chapters/references}
 
 \end{document}
 
