Finished asm.js section

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -21,6 +21,7 @@
 \usepackage{listings}
 \usepackage{ucs}
 \usepackage[utf8]{inputenc} 
+\usepackage[T1]{fontenc}
 \hyphenation{op-tical net-works semi-conduc-tor}
 
 
