Fixes and more references

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -34,7 +34,7 @@
 \input{chapters/webworkers}
 \input{chapters/datachannel}
 \input{chapters/webgpu}
-\input{chapters/conclusion}
+\input{chapters/summary}
 \input{chapters/references}
 
 \end{document}
