Split summary to add conclusion

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -35,6 +35,7 @@
 \input{chapters/datachannel}
 \input{chapters/webgpu}
 \input{chapters/summary}
+\input{chapters/conclusion}
 \input{chapters/references}
 
 \end{document}
